--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -59,8 +59,13 @@
 html,
 body {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
   height: 100%; // ensure full viewport height
+  width: 100%;
+  overflow-x: hidden; /* removes horizontal scroll bar */
+
+
 }
 
 body {
@@ -73,6 +78,7 @@ body {
 
 main {
   flex: 1; // expands to fill space between NavBar and Footer
+  align-self: center;
 }
 
 footer {
